# FlashcardCreator

./: .dockerignore  .gitignore  Dockerfile  app.py  compose.yaml  main.py  ocr.py  pyproject.toml
src/flashcard_creator/: anki_export.py  app.py  file_browser.py  flashcard_editor.py  image_processor.py  ocr.py  project_manager.py
