[project]
name = "flashcardcreator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genanki>=0.13.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "streamlit>=1.58.0",
    "streamlit-cropper>=0.3.1",
    "streamlit-file-browser>=3.2.22",
]
